# CM5_Monitor

./: CMakeLists.txt  README.md  cm5_monitor.py  cm5_monitor.service  install.sh  leds_ctrl  main.cpp
src/: piolib.c
